Replace `String.format` w/ `String.formatted`