@@ -508,7 +508,7 @@ public class ReactivePulsarListenerAnnotationBeanPostProcessor<V>
 		}
 		else {
 			throw new IllegalArgumentException(
-					String.format("@ReactivePulsarListener can't resolve '%s' as a String", resolvedValue));
+					"@ReactivePulsarListener can't resolve '%s' as a String".formatted(resolvedValue));
 		}
 	}
 
@@ -536,12 +536,12 @@ public class ReactivePulsarListenerAnnotationBeanPostProcessor<V>
 				ReflectionUtils.handleReflectionException(ex);
 			}
 			catch (NoSuchMethodException ex) {
-				throw new IllegalStateException(String.format(
-						"@ReactivePulsarListener method '%s' found on bean target class '%s', "
-								+ "but not found in any interface(s) for bean JDK proxy. Either "
-								+ "pull the method up to an interface or switch to subclass (CGLIB) "
-								+ "proxies by setting proxy-target-class/proxyTargetClass " + "attribute to 'true'",
-						method.getName(), method.getDeclaringClass().getSimpleName()), ex);
+				throw new IllegalStateException("@ReactivePulsarListener method '%s' found on bean target class '%s', "
+						+ "but not found in any interface(s) for bean JDK proxy. Either "
+						+ "pull the method up to an interface or switch to subclass (CGLIB) "
+						+ "proxies by setting proxy-target-class/proxyTargetClass "
+						+ "attribute to 'true'".formatted(method.getName(), method.getDeclaringClass().getSimpleName()),
+						ex);
 			}
 		}
 		return method;
